fix: Fix css elements being visible

--- a/apps/fillForm/client/main.css
+++ b/apps/fillForm/client/main.css
@@ -128,6 +128,9 @@ div[id^=error-list].alert-success {
     border:2px dashed #ddd;
     text-align:center
 }
+.formio-component-file .visually-hidden {
+  display:none;
+}
 .formio-component-file .fileSelector .loader-wrapper {
     display:none;
     width:100%;
